objects/tffa__ServiceConfiguration__mdt.object
<CustomObject>
    <description>Will contain configuration for overriding class implementations</description>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Used for describing the class and its usage</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the extensions are enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExtensionClass__c</fullName>
        <description>The class name which extends class mentioned in DeveloperName</description>
        <label>ExtensionClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Configuration</label>
    <listViews>
        <fullName>tffa__IntegrationProviders</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>tffa__Enabled__c</columns>
        <columns>tffa__ExtensionClass__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>contains</operation>
            <value>Provider</value>
        </filters>
        <label>Integration Providers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>tffa__Resolver</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>tffa__Enabled__c</columns>
        <columns>tffa__ExtensionClass__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>contains</operation>
            <value>Resolver</value>
        </filters>
        <label>Resolver</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>tffa__ServiceConfigurations</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>tffa__Enabled__c</columns>
        <columns>tffa__ExtensionClass__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>contains</operation>
            <value>Ext</value>
        </filters>
        <label>Service Extension</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Service Configurations</pluralLabel>
</CustomObject>